pms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/preserve-host: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/no-cache: "true"
    nginx.ingress.kubernetes.io/no-store: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /pms/$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: cit-it-pms-ingress
  namespace: management
spec:
  rules:
  - host: ${HOST}
    http:
      paths:
      - backend:
          service:
            name: cit-it-pms-service
            port:
              number: 80
        path: /pms(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ${HOST}
    secretName: ssl-cert-ciandt
